--- a/public/documentation.html
+++ b/public/documentation.html
@@ -61,7 +61,7 @@
             height="25"
             class="d-inline-block align-top"
             title="Return to Top of List"
-            alt="Popcorj image that will take you to the top of the page"
+            alt="Popcorn image that will take you to the top of the page"
           />
           Home
         </a>
@@ -182,7 +182,7 @@
                 height="25"
                 class="d-inline-block align-top"
                 title="Return to Top of List"
-                alt="Popcorj image that will take you to the top of the page"
+                alt="Popcorn image that will take you to the top of the page"
               />Getting Started
             </h4>
             <a href="https://github.com/eahowell/movie_api/blob/main/README.md">
@@ -201,7 +201,7 @@
                 height="25"
                 class="d-inline-block align-top"
                 title="Return to Top of List"
-                alt="Popcorj image that will take you to the top of the page"
+                alt="Popcorn image that will take you to the top of the page"
               />Installation
             </h4>
             <p>Include info on the start and dev modes</p>
@@ -213,7 +213,7 @@
                 height="25"
                 class="d-inline-block align-top"
                 title="Return to Top of List"
-                alt="Popcorj image that will take you to the top of the page"
+                alt="Popcorn image that will take you to the top of the page"
               />Dependencies
             </h4>
             <!-- <p> -->
@@ -233,7 +233,7 @@
               >
                 <div class="ms-2 me-auto">
                   <div class="fw-bold">Local</div>
-                  <!-- MARK: Dependancies -->
+                  <!-- MARK: Dependencies -->
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item">Bcrypt: ^5.1.1</li>
                     <li class="list-group-item">Body-Parser: ^1.20.2</li>
@@ -272,7 +272,7 @@
                 height="25"
                 class="d-inline-block align-top"
                 title="Return to Top of List"
-                alt="Popcorj image that will take you to the top of the page"
+                alt="Popcorn image that will take you to the top of the page"
               />API Endpoints
             </h4>
             <div class="endpointsList">
@@ -612,7 +612,7 @@
               <h5 id="interacting-with-the-users">
                 Interacting with the Users
               </h5>
-              <!-- MARK: Resgister -->
+              <!-- MARK: Register -->
               <details class="endpoints">
                 <summary>
                   <code>POST</code> <code><b>/users</b></code>
@@ -659,7 +659,7 @@
                         <td><code>422</code></td>
                         <td>application/json</td>
                         <td>
-                          A JSON object holding an array of the validation erros
+                          A JSON object holding an array of the validation errors
                         </td>
                       </tr>
                       <tr>
@@ -1753,7 +1753,7 @@
                         <td><code>400</code></td>
                         <td>text/plain;charset=UTF-8</td>
                         <td>
-                          &quot;The actor &quot; + namr + &quot; was not
+                          &quot;The actor &quot; + name + &quot; was not
                           found&quot;
                         </td>
                       </tr>
@@ -1789,7 +1789,7 @@
                 height="25"
                 class="d-inline-block align-top"
                 title="Return to Top of List"
-                alt="Popcorj image that will take you to the top of the page"
+                alt="Popcorn image that will take you to the top of the page"
               />Authentication
             </h4>
             <p>...</p>
@@ -1801,7 +1801,7 @@
                 height="25"
                 class="d-inline-block align-top"
                 title="Return to Top of List"
-                alt="Popcorj image that will take you to the top of the page"
+                alt="Popcorn image that will take you to the top of the page"
               />Database
             </h4>
             <p>...</p>
@@ -1812,7 +1812,7 @@
                 height="25"
                 class="d-inline-block align-top"
                 title="Return to Top of List"
-                alt="Popcorj image that will take you to the top of the page"
+                alt="Popcorn image that will take you to the top of the page"
               />Licenses
             </h4>
             <p>...</p>
