--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <!-- Favicon imprt -->
+    <!-- Favicon import -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -61,7 +61,7 @@
             height="25"
             class="d-inline-block align-top"
             title="Return to Top of List"
-            alt="Popcorj image that will take you to the top of the page"
+            alt="Popcorn image that will take you to the top of the page"
           />
           Home
         </a>
