Updated the welcome page

--- a/public/index.html
+++ b/public/index.html
@@ -98,10 +98,26 @@
     <main class="page-container">
       <div class="container text-centered centered messageDiv">
         <div></div>
-        <h1 class="row">Welcome to myFlix API</h1>
-        <h3 class="messageBody row" id="messageBody">
-          Login to get started! Or register for your on account
-        </h3>
+        <h1 class="">Welcome to myFlix API</h1>
+        
+        <div>
+          <p class="messageBody">
+            The myFlix API is a RESTful API that provides access to a movie database. It allows users to retrieve information about movies, directors, and genres, as well as manage user accounts and favorites.
+          </p>
+          <p class="messageBody">
+            The API is built using Node.js, Express, and MongoDB, and follows RESTful principles to provide a simple and intuitive interface for developers to interact with the movie database.
+          </p>
+          <p class="messageBody">
+            The API is designed to be easy to use and flexible, allowing developers to integrate it into their applications quickly and efficiently. It supports a variety of request methods, including <strong>GET</strong>, <strong>POST</strong>, <strong>PUT</strong>, and <strong>DELETE</strong>, and returns data in <strong>JSON</strong> format. You can see more details in the repository <a href="https://github.com/eahowell/movie_api" target="_blank" rel="noopener noreferrer">README.md</a> or <a href="documentation.html">here</a>.
+          </p>
+          <p class="messageBody">
+            This is used by both the <a href="https://github.com/eahowell/myFlix-Angular-client" target="_blank" rel="noopener noreferrer">myFlix Angular Frontend</a> and the <a href="https://github.com/eahowell/myFlix-client" target="_blank" rel="noopener noreferrer">myFlix React Frontend</a>.
+          </p>
+          <p class="messageBody">
+            You can visit the live app for each <a href="https://eahowell.github.io/myFlix-Angular-client/welcome" target="_blank" rel="noopener noreferrer">myFlix Angular</a> and the <a href="https://eahowell-myflix.netlify.app/" target="_blank" rel="noopener noreferrer">myFlix React</a>. You will need to create an account to use the app or you can use the following credentials:
+            <p><strong>Username</strong>: testportfolio and <strong>Password</strong>: 12345678</p>
+          </p>
+        </div>
       </div>
     </main>
     <script
